updated art portfolio, implemented bootstrap

--- a/css/beyond.css
+++ b/css/beyond.css
@@ -15,7 +15,6 @@
 /* General Styling */
 html {
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    background-color: var(--page-background)
 }
 
 body, ul, li, h1 {
@@ -26,17 +25,78 @@ body, ul, li, h1 {
 
 h1 {
     text-align: center;
-    margin: 2%;
-    padding: 2%;
+    padding-top: 20px;
     color: var(--standard-text);
     font-size: 30pt;
 }
-
+/*
 h2 {
     text-align: left;
     margin: 2% 10%;
     color: var(--standard-text);
     font-size: 20pt;
+}*/
+
+.image-body {
+    background-size: cover;
+    height: 100%;
+    overflow: auto;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+}
+
+#home-body {
+    background-image: url(../img/Pink_Opaque.jpg);
+}
+
+#project-body {
+    background-image: url(../img/Pink_Opaque.jpg);
+}
+
+#art-body {
+    background-image: url(../img/Pink_Opaque.jpg);
+}
+
+#about-body {
+    background-image: url(../img/Pink_Opaque.jpg);
+}
+
+.central-box {
+    display: flex;
+    flex-wrap: wrap;
+    flex-grow: 1;
+    flex-basis: 70%;
+    flex-direction: column;
+    box-sizing: border-box;
+    overflow-wrap: break-word;
+    word-break: break-word;
+    width:80%;
+    max-width: 800px;
+    background-color: var(--box-color);
+    color: var(--standard-text)
+}
+
+.title-box {
+    text-align: center;
+    height: auto;
+    margin: auto;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    padding: 10px;
+}
+
+.art-box {
+    text-align: center;
+    height: auto;
+    margin: auto;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    padding: 70px;
+}
+
+.card {
+    margin-top: 20px;
 }
 
 /* Navigation Menu*/
@@ -61,6 +121,11 @@ nav ul li a {
 
 nav ul li a:hover:not(.active) {
     background-color: var(--nav-hover);
+    color: var(--standard-text);
+}
+
+nav ul li a:hover.active {
+    color: var(--nav-active-text);
 }
 
 .active {
@@ -69,7 +134,7 @@ nav ul li a:hover:not(.active) {
 }
 
 /* Image Gallery */
-div.gallery {
+/*div.gallery {
     display: grid;
     margin: 5% 10% 5% 10%;
     width: 80%;
@@ -113,21 +178,20 @@ div.gallery img {
     .responsive {
       width: 100%;
     }
-}
+}*/
 
 /* List Formating*/
-.list-box {
-    display: flex;
-    margin: 5% 5% 5% 5%;
-    width: 80%;
-    height: fit-content;
-    padding: 40px;
-    background-color: var(--box-color);
+#project-box {
+    text-align: left;
+    height: auto;
+    margin: auto;
+    margin-top: 100px;
+    margin-bottom: 50px;
+    padding: 70px;
 }
 
 div.list-box ul {
     list-style-type:square;
-    text-align: left;
 }
 
 div ul li {
