--- a/public/css/beyond.css
+++ b/public/css/beyond.css
@@ -79,6 +79,7 @@ h2 {
 .title-box {
     text-align: center;
     height: auto;
+    max-width: 50%;
     margin: auto;
     margin-top: 50px;
     margin-bottom: 50px;
@@ -116,6 +117,11 @@ h2 {
   }
 
 /* Navigation Menu*/
+div#nav-bar {
+    padding: 0;
+    margin: 0;
+}
+
 #menu, #menu ul {
     margin: 0;
     margin: 0;
@@ -139,6 +145,7 @@ h2 {
 }
 
 #menu li {
+    margin: 0;
     float:left;
     position: relative;
 }
