--- a/public/css/beyond.css
+++ b/public/css/beyond.css
@@ -5,12 +5,10 @@
     --link-hover: rgb(76, 170, 247);
     --nav-color: rgb(0, 0, 0);
     --nav-hover: rgb(32, 33, 36);
-    --nav-active: rgb(51, 94, 143);
-    /*rgb(51, 94, 143);*/
+    --nav-active: rgb(84, 54, 133);
     --nav-active-text: rgb(255, 255, 255);
-    /*--box-color: rgba(0, 0, 0, 0.685);*/
-    --box-color: rgba(32, 33, 36, 0.685);
-    --gallery-highlight: rgba(51, 94, 143, 0.5);
+    --box-color: rgba(0,0,0, 0.685);
+    --gallery-highlight: rgba(115, 83, 168, 0.5);
 }
 
 /* General Styling */
@@ -60,18 +58,23 @@ h2 {
     overflow-wrap: break-word;
     word-break: break-word;
     width:80%;
-    max-width: 800px;
+    max-width: 1000px;
+    margin:auto;
     background-color: var(--box-color);
-    color: var(--standard-text)
+    color: var(--standard-text);
+    border-radius: 6px;
+    border-color: var(--gallery-highlight);
+    border-style: solid;
+    border-width: 3px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    padding: 2%
 }
 
 .title-box {
     text-align: center;
     height: auto;
     max-width: 40%;
-    margin: auto;
-    margin-top: 50px;
-    margin-bottom: 50px;
     padding: 10px;
 }
 
@@ -80,23 +83,21 @@ h2 {
         max-width: 1000px;
         height: auto;
         margin: auto;
-        margin-top: 50px;
-        margin-bottom: 50px;
-        padding: 5%;
 }
 
 .art-box {
     text-align: center;
     height: auto;
     margin: auto;
-    margin-top: 50px;
-    margin-bottom: 50px;
-    padding: 5%
 }
 
 .card {
     margin-top: 20px;
 }
+
+/*.embed-responsive .card-img-top {
+    object-fit: cover;
+}*/
 
 .card:hover {
     -webkit-box-shadow:inset 0px 0px 0px 10px var(--gallery-highlight);
@@ -112,7 +113,7 @@ h2 {
     margin: auto;
     margin-top: 50px;
     margin-bottom: 50px;
-    padding: 5%;
+    
 }
 
 div.list-box ul {
