--- a/public/css/beyond.css
+++ b/public/css/beyond.css
@@ -58,7 +58,7 @@ h2 {
     overflow-wrap: break-word;
     word-break: break-word;
     width:80%;
-    max-width: 1000px;
+    max-width: 70%;
     margin:auto;
     background-color: var(--box-color);
     color: var(--standard-text);
@@ -79,14 +79,14 @@ h2 {
 }
 
 .art-home-box {
-        text-align: center;
-        max-width: 1000px;
-        height: auto;
-        margin: auto;
+    text-align: center;
+    height: auto;
+    margin: auto;
 }
 
 .art-box {
     text-align: center;
+    max-width: 50%;
     height: auto;
     margin: auto;
 }
@@ -108,7 +108,6 @@ h2 {
 /* List Formating*/
 .project-box {
     text-align: left;
-    max-width: 1000px;
     height: auto;
     margin: auto;
     margin-top: 50px;
@@ -133,7 +132,6 @@ div ul li a {
 div ul li a:hover {
     color: var(--link-hover)
 }
-
 
 /* Navigation Menu*/
 div#nav-bar {
@@ -172,9 +170,10 @@ div#nav-bar {
 
 #menu a {
     float: left;
-    padding: 12px 30px;
+    padding: 12px 40px;
     text-decoration: none;
     color:var(--standard-text);
+    white-space: pre-wrap;
 }
 
 .active {
@@ -199,10 +198,10 @@ div#nav-bar {
     margin: 20px 0 0 0;
     padding: 0;
     opacity: 0;
-    text-align: center;
+    text-align: left;
     visibility: hidden;
     position: absolute;
-    top: 46px;
+    top: 47px;
     z-index: 1;
     background-color: var(--nav-color);
 }
@@ -212,3 +211,8 @@ div#nav-bar {
     visibility: visible;
     margin: 0;
 }
+
+#menu li ul a {
+    padding: 12px;    
+}
+
