--- a/css/beyond.css
+++ b/css/beyond.css
@@ -21,6 +21,10 @@ body, ul, li, h1 {
     padding: 0;
     border: 0;
 }
+
+p a {
+    text-decoration: none;
+}
 /*
 h1 {
     text-align: center;
@@ -66,8 +70,8 @@ h2 {
     border-color: var(--gallery-highlight);
     border-style: solid;
     border-width: 3px;
-    margin-top: 50px;
-    margin-bottom: 50px;
+    margin-top: 5%;
+    margin-bottom: 5%;
     padding: 2%
 }
 
@@ -94,6 +98,7 @@ h2 {
 .card {
     margin-top: 20px;
 }
+
 
 /*.embed-responsive .card-img-top {
     object-fit: cover;
@@ -215,4 +220,9 @@ div#nav-bar {
 #menu li ul a {
     padding: 12px;    
 }
-
+/*
+@media (min-width: 1920.98px) { 
+   .card {
+       margin-top: 70px;
+   }
+ }
