--- a/css/beyond.css
+++ b/css/beyond.css
@@ -138,7 +138,112 @@ div ul li a:hover {
     color: var(--link-hover)
 }
 
+/* Nav Bar
+https://erikterwan.com/ */
+
+#menuToggle {
+    display: block;
+    position: relative;
+    top: 50px;
+    left: 50px;
+    z-index: 1;
+    -webkit-user-select: none;
+    user-select: none;
+}
+
+#menuToggle a {
+    text-decoration: none;
+    color: #cdcdcd; /*TEXT COLOR*/
+    transition: color 0.3s ease;
+}
+
+#menuToggle a:hover {
+    color: var(--nav-active)
+}
+
+#menuToggle input {
+    display: block;
+    width: 40px;
+    height: 32px;
+    position: absolute;
+    top: -7px;
+    left:-5px;
+    cursor:pointer;
+    opacity: 0; /*hide*/
+    z-index: 2;
+    -webkit-touch-callout: none;
+}
+
+/* hamburger */
+#menuToggle span {
+    display: block;
+    width: 33px;
+    height: 4px;
+    margin-bottom: 5px;
+    position: relative;
+    background: #cdcdcd;
+    border-radius: 3px;
+    z-index: 1;
+    transform-origin: 4px 0px;
+    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+                background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+                opacity 0.55s ease;
+}
+
+#menuToggle span:first-child {
+    transform-origin: 0% 0%;
+}
+
+#menuToggle span:nth-last-child(2) {
+    transform-origin: 0% 100%;
+}
+
+/* rotate first span */
+#menuToggle input:checked ~ span {
+    opacity: 1;
+    transform: rotate(45deg) translate(-2px, -1px);
+    /*background: #232323; set x color*/
+}
+
+/* hide middle span*/
+#menuToggle input:checked ~ span:nth-last-child(3)
+{
+  opacity: 0;
+  transform: rotate(0deg) scale(0.2, 0.2);
+}
+
+/* rotate last span */
+#menuToggle input:checked ~ span:nth-last-child(2)
+{
+  transform: rotate(-45deg) translate(0, -1px);
+}
+
+#menu {
+    position: absolute;
+    width: 300px;
+    margin: -100px 0 0 -50px;
+    padding: 50px;
+    padding-top: 125px;
+    background: var(--nav-color);
+    list-style: none;
+    -webkit-font-smoothing: antialiased;
+    transform-origin: 0% 0%;
+    transform: translate(-150%, 0); 
+    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+}
+
+#menu li {
+    padding: 10px 0;
+}
+
+#menuToggle input:checked ~ ul {
+    transform: none;
+}
+
+
+
 /* Navigation Menu*/
+/*
 div#nav-bar {
     padding: 0;
     margin: 0;
@@ -220,9 +325,17 @@ div#nav-bar {
 #menu li ul a {
     padding: 12px;    
 }
-/*
-@media (min-width: 1920.98px) { 
-   .card {
-       margin-top: 70px;
-   }
- }
+
+*/
+
+/* smartphone landscape*/
+@media only screen
+and (min-device-width: 321px) {
+    
+}
+
+/* smartphone portrait*/
+@media only screen
+and (min-device-width: 321px) {
+    
+}
