--- a/css/beyond.css
+++ b/css/beyond.css
@@ -143,7 +143,7 @@ https://erikterwan.com/ */
 
 #menuToggle {
     display: block;
-    position: relative;
+    position: absolute;
     top: 50px;
     left: 50px;
     z-index: 1;
