--- a/css/beyond.css
+++ b/css/beyond.css
@@ -25,6 +25,7 @@ body, ul, li, h1 {
 }
 
 body {
+    background: rgb(0, 0, 0);
     height: 100vh; /* trying to fix url jump*/ 
 }
 
@@ -77,7 +78,6 @@ h2 {
     box-sizing: border-box;
     overflow-wrap: break-word;
     word-break: keep-all;
-    
     width:80%;
     max-width: 70%;
     margin:auto;
@@ -89,13 +89,13 @@ h2 {
     border-width: 3px;
     margin-top: 5%;
     margin-bottom: 5%;
-    padding: 2%
+    padding: 2%;
 }
 
 .title-box {
     text-align: center;
     height: auto;
-    max-width: 40%;
+    max-width: 45%;
     padding: 10px;
 }
 
@@ -122,6 +122,10 @@ h2 {
     margin-top: 50px;
     margin-bottom: 50px;
 } */
+
+div.list-box ul {
+    font-size: calc(0.65em + 1vmin);   
+}
 
 div.list-box ul {
     list-style-type:square;
