--- a/css/beyond.css
+++ b/css/beyond.css
@@ -89,7 +89,7 @@ h2 {
     border-width: 3px;
     margin-top: 5%;
     margin-bottom: 5%;
-    padding: 2%;
+    padding: 3%;
 }
 
 .title-box {
@@ -97,6 +97,7 @@ h2 {
     height: auto;
     max-width: 45%;
     padding: 10px;
+    margin-bottom: 0px;
 }
 
 .art-box {
