change card hover and margins

--- a/css/beyond.css
+++ b/css/beyond.css
@@ -104,11 +104,7 @@ h2 {
     text-align: center;
 }
 
-.card {
-    margin-top: 20px;
-}
-
-.card:hover {
+.hoverable:hover {
     -webkit-box-shadow:inset 0px 0px 0px 10px var(--gallery-highlight);
     -moz-box-shadow:inset 0px 0px 0px 10px var(--gallery-highlight);
     box-shadow:inset 0px 0px 0px 10px var(--gallery-highlight);
