--- a/css/beyond.css
+++ b/css/beyond.css
@@ -1,20 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&family=Ubuntu:wght@400;500;700&display=swap');
 /* Color Scheme */
 :root {
-    --page-background: rgb(29, 38, 59);
-    --standard-text: rgb(192, 192, 192);
-    --link-hover: rgb(76, 170, 247);
-    --nav-color: rgb(0, 0, 0);
-    --nav-hover: rgb(32, 33, 36);
-    --nav-active: rgb(84, 54, 133);
-    --nav-active-text: rgb(255, 255, 255);
-    --nav-hover-text: rgb(63,76,171);
-    --box-color: rgba(0,0,0, 0.685);
-    --gallery-highlight: rgba(115, 83, 168, 0.5);
+    --off-white: rgb(192, 192, 192);
+    --light-blue: rgb(76, 170, 247);
+    --med-blue: rgb(63,76,171);
+    --turquoise: rgb(33,179,220);
+    --opaque-black: rgba(0,0,0, 0.685);
+    --opaque-purple: rgba(115, 83, 168, 0.5);
 }
 
 /* General Styling */
 html {
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     min-height: 100vh;
 }
 
@@ -41,21 +37,6 @@ p img {
     float: right;
 }
 
-/*
-h1 {
-    text-align: center;
-    padding-top: 20px;
-    color: var(--standard-text);
-    font-size: 30pt;
-}
-/*
-h2 {
-    text-align: left;
-    margin: 2% 10%;
-    color: var(--standard-text);
-    font-size: 20pt;
-}*/
-
 .image-body {
     background-size: cover;
     height: 100%;
@@ -77,13 +58,12 @@ h2 {
     box-sizing: border-box;
     overflow-wrap: break-word;
     word-break: keep-all;
-    width:80%;
     max-width: 75%;
     margin:auto;
-    background-color: var(--box-color);
-    color: var(--standard-text);
+    background-color: var(--opaque-black);
+    color: white;
     border-radius: 6px;
-    border-color: var(--gallery-highlight);
+    border-color: var(--opaque-purple);
     border-style: solid;
     border-width: 3px;
     margin-top: 5%;
@@ -94,6 +74,7 @@ h2 {
 .title-box {
     text-align: center;
     height: auto;
+    font-family: 'Ubuntu';
     max-width: 45%;
     padding: 10px;
     margin-bottom: 0px;
@@ -103,6 +84,7 @@ h2 {
     text-align: center;
 }
 
+/* card alterations */
 .hoverable {
     -o-transition:0.3s;
     -ms-transition:0.3s;
@@ -112,21 +94,12 @@ h2 {
 }
 
 .hoverable:hover {
-    -webkit-box-shadow:inset 0px 0px 0px 10px var(--gallery-highlight);
-    -moz-box-shadow:inset 0px 0px 0px 10px var(--gallery-highlight);
-    box-shadow:inset 0px 0px 0px 10px var(--gallery-highlight);
+    -webkit-box-shadow:inset 0px 0px 0px 10px var(--opaque-purple);
+    -moz-box-shadow:inset 0px 0px 0px 10px var(--opaque-purple);
+    box-shadow:inset 0px 0px 0px 10px var(--opaque-purple);
 }
 
 /* List Formating*/
-/*
-.project-box {
-    text-align: left;
-    height: auto;
-    margin: auto;
-    margin-top: 50px;
-    margin-bottom: 50px;
-} */
-
 div.list-box ul {
     font-size: calc(0.65em + 1vmin);   
 }
@@ -135,28 +108,184 @@ div.list-box ul {
     list-style-type:square;
 }
 
-div ul li {
-    color:var(--standard-text);;
+div.list-box ul li {
+    color:var(--off-white);;
     margin: 10px 0;
 }
 
-div ul li a {
-    color:var(--standard-text);;
+div.list-box ul li a {
+    color:var(--off-white);;
     text-decoration: none;
+    transition: color 0.3s ease;
 }
 
-div ul li a:hover {
-    color: var(--link-hover)
+div.list-box ul li a:hover {
+    color: var(--light-blue)
 }
 
+/*nav bar*/
+.navbar {
+    z-index: 999;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+   /* background: black;*/
+    color: var(--off-white);
+}
+
+.logo {
+    font-size: calc(1.5em + 0.5vmin);
+    font-family: 'Ubuntu' sans-serif;
+    margin: 0.5rem;
+}
+
+.logo a {
+    text-decoration: none;
+    color: var(--turquoise);
+}
+
+.logo a:hover {
+    text-decoration: none;
+    color: var(--turquoise);
+}
+
+
+.navbar-links ul {
+    margin: 0;
+    padding: 0;
+    display: flex;
+}
+
+.navbar-links li {
+    list-style: none;
+}
+
+.navbar-links li a {
+    text-decoration: none;
+    color: var(--off-white);
+    padding: 1rem;
+    display: block;
+}
+
+.navbar-links li a {
+    color: var(--off-white);
+    transition: color 0.3s ease;
+}
+
+.navbar-links a:hover {
+    color: var(--turquoise);
+}
+
+.navbar-links a.active {
+    color: var(--turquoise);
+}
+
+.toggle-button {
+    position: absolute;
+    top: 1.25rem;
+    right: 1.25rem;
+    display: none;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 30px;
+    height: 21px;
+}
+
+.toggle-button .bar {
+    height: 3px;
+    width: 100%;
+    background: var(--off-white);
+    border-radius: 3px;
+    transform-origin: 3px 0px;
+    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+                background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+                opacity 0.55s ease;
+}
+
+.toggle-button .bar { /*middle*/
+    transform-origin: 0% 0%;
+}
+
+.toggle-button .bar:nth-last-child(1) { /*middle*/
+    transform-origin: 0% 100%;
+}
+
+.toggle-button .bar.active { /*middle*/
+    opacity: 1;
+    transform: rotate(45deg) translate(-2px, -1px);
+}
+
+.toggle-button .bar.active:nth-last-child(2) { /*top?*/
+    opacity: 0;
+    transform: rotate(0deg) scale(0.2, 0.2);
+}
+
+.toggle-button .bar.active:nth-last-child(1) { /*bottom*/
+    transform: rotate(-45deg) translate(0, -1px);
+}
+
+/* nav bar for smaller screen sizes */
+@media (max-width: 700px) {
+    .toggle-button {
+        display: flex;
+    }
+
+    .navbar-links {
+       display: none;
+       width: 100%;
+    }
+
+    .navbar {
+        flex-direction: column;
+        align-items: flex-start;
+        background: black;
+    }
+
+    .navbar-links ul {
+        width: 100%;
+        flex-direction: column;
+    }
+
+    .navbar-links li {
+        text-align: center;
+    }
+
+    .navbar-links li a {
+        padding: .5rem 1rem;
+        transition: color 0.s ease;
+    }
+
+    .navbar-links.active {
+        display: flex;
+        position: absolute;
+        background: black;
+        margin-top: 50px;
+        transition: 0.3s;
+    }
+    
+}
 /* Nav Bar
 https://erikterwan.com/ */
 
+/*
+.navbar {
+    background-color: black;
+}
+
+.navbar .logo {
+    font-family: 'Ubuntu';
+    color: var(--turquoise);
+    font-size: calc(1.5em + 0.5vmin);
+    font-weight: 500;
+    right: 5%;
+    padding: 10px 20px;
+}
+
 #menuToggle {
     display: block;
-    position: absolute;
-    top: 50px;
-    left: 50px;
+    position: relative;
+    top: 12%;
+    left: 30px;
     z-index: 1;
     -webkit-user-select: none;
     user-select: none;
@@ -164,12 +293,12 @@ https://erikterwan.com/ */
 
 #menuToggle a {
     text-decoration: none;
-    color: var(--standard-text); /*TEXT COLOR*/
+    color: var(--off-white); 
     transition: color 0.3s ease;
 }
 
 #menuToggle a:hover {
-    color: var(--nav-hover-text);
+    color: var(--turquoise);
 }
 
 #menuToggle input {
@@ -180,12 +309,11 @@ https://erikterwan.com/ */
     top: -7px;
     left:-5px;
     cursor:pointer;
-    opacity: 0; /*hide*/
+    opacity: 0; 
     z-index: 2;
     -webkit-touch-callout: none;
 }
 
-/* hamburger */
 #menuToggle span {
     display: block;
     width: 33px;
@@ -209,21 +337,17 @@ https://erikterwan.com/ */
     transform-origin: 0% 100%;
 }
 
-/* rotate first span */
 #menuToggle input:checked ~ span {
     opacity: 1;
     transform: rotate(45deg) translate(-2px, -1px);
-    /*background: #232323; set x color*/
 }
 
-/* hide middle span*/
 #menuToggle input:checked ~ span:nth-last-child(3)
 {
   opacity: 0;
   transform: rotate(0deg) scale(0.2, 0.2);
 }
 
-/* rotate last span */
 #menuToggle input:checked ~ span:nth-last-child(2)
 {
   transform: rotate(-45deg) translate(0, -1px);
@@ -236,7 +360,7 @@ https://erikterwan.com/ */
     margin: -100px 0 0 -50px;
     padding: 50px;
     padding-top: 125px;
-    background: var(--nav-color);
+    background: black;
     list-style: none;
     -webkit-font-smoothing: antialiased;
     transform-origin: 0% 0%;
@@ -255,6 +379,7 @@ https://erikterwan.com/ */
 #menu li ul {
     display: none;
 }
+*/
 
 /* Old Navigation Menu*/
 /*
@@ -339,5 +464,18 @@ div#nav-bar {
 #menu li ul a {
     padding: 12px;    
 }
+
+
+    --page-background: rgb(29, 38, 59);
+    --standard-text: rgb(192, 192, 192);
+    --link-hover: rgb(76, 170, 247);
+    --nav-color: rgb(0, 0, 0);
+    --nav-hover: rgb(32, 33, 36);
+    --nav-active: rgb(84, 54, 133);
+    --nav-active-text: rgb(255, 255, 255);
+    --nav-hover-text: rgb(63,76,171);
+    --turquoise: rgb(33,179,220);
+    --box-color: rgba(0,0,0, 0.685);
+    --gallery-highlight: rgba(115, 83, 168, 0.5);
 
 */
