--- a/css/beyond.css
+++ b/css/beyond.css
@@ -74,10 +74,14 @@ p img {
 .title-box {
     text-align: center;
     height: auto;
-    font-family: 'Ubuntu';
-    max-width: 45%;
+    max-width: 35%;
     padding: 10px;
     margin-bottom: 0px;
+}
+
+.title-box h1 {
+    font-family: 'Ubuntu';
+    font-size: calc(1.5em + 0.5vmin);
 }
 
 .art-box {
@@ -120,7 +124,7 @@ div.list-box ul li a {
 }
 
 div.list-box ul li a:hover {
-    color: var(--light-blue)
+    color: var(--turquoise)
 }
 
 /*nav bar*/
@@ -136,12 +140,14 @@ div.list-box ul li a:hover {
 .logo {
     font-size: calc(1.5em + 0.5vmin);
     font-family: 'Ubuntu' sans-serif;
-    margin: 0.5rem;
+    margin: 0.5rem 1.5rem;
 }
 
 .logo a {
     text-decoration: none;
-    color: var(--turquoise);
+    color: var(--off-white);
+    font-weight: 600;
+    transition: color 0.3s ease;
 }
 
 .logo a:hover {
@@ -165,10 +171,6 @@ div.list-box ul li a:hover {
     color: var(--off-white);
     padding: 1rem;
     display: block;
-}
-
-.navbar-links li a {
-    color: var(--off-white);
     transition: color 0.3s ease;
 }
 
@@ -176,7 +178,7 @@ div.list-box ul li a:hover {
     color: var(--turquoise);
 }
 
-.navbar-links a.active {
+.navbar-links li a.active {
     color: var(--turquoise);
 }
 
@@ -228,6 +230,10 @@ div.list-box ul li a:hover {
 @media (max-width: 700px) {
     .toggle-button {
         display: flex;
+    }
+
+    .logo a{
+        color: var(--turquoise);
     }
 
     .navbar-links {
