--- a/css/beyond.css
+++ b/css/beyond.css
@@ -22,6 +22,7 @@ body, ul, li, h1 {
 
 body {
     height: 100vh; /* trying to fix url jump*/ 
+    font-family: 'Ubuntu';
 }
 
 p {
@@ -58,19 +59,25 @@ p img {
     box-sizing: border-box;
     overflow-wrap: break-word;
     word-break: keep-all;
+    font-family: 'Ubuntu';
     max-width: 75%;
     margin:auto;
     background-color: var(--opaque-black);
-    color: white;
+    color: var(--off-white);
     border-radius: 6px;
     border-color: var(--opaque-purple);
     border-style: solid;
     border-width: 3px;
-    margin-top: 5%;
+    margin-top: 3%;
     margin-bottom: 5%;
     padding: 3%;
 }
 
+.central-box p {
+    font-family: 'Poppins';
+}
+
+/*
 .title-box {
     text-align: center;
     height: auto;
@@ -82,6 +89,20 @@ p img {
 .title-box h1 {
     font-family: 'Ubuntu';
     font-size: calc(1.5em + 0.5vmin);
+}*/
+
+.page-title {
+    text-align: left;
+    font-family: 'Ubuntu';
+    font-size: calc(2.0em + 0.5vmin);
+    font-weight: 500;
+    color: var(--off-white);
+    margin-top: 25px;
+    padding-left: 20%;
+}
+
+.page-title span {
+   color: var(--turquoise);
 }
 
 .art-box {
@@ -103,6 +124,10 @@ p img {
     box-shadow:inset 0px 0px 0px 10px var(--opaque-purple);
 }
 
+.card .card-body .card-title{
+    font-family: 'Ubuntu';
+}
+
 /* List Formating*/
 div.list-box ul {
     font-size: calc(0.65em + 1vmin);   
@@ -113,12 +138,12 @@ div.list-box ul {
 }
 
 div.list-box ul li {
-    color:var(--off-white);;
+    font-family: 'Poppins';
     margin: 10px 0;
 }
 
 div.list-box ul li a {
-    color:var(--off-white);;
+    color:var(--off-white);
     text-decoration: none;
     transition: color 0.3s ease;
 }
@@ -148,6 +173,10 @@ div.list-box ul li a:hover {
     color: var(--off-white);
     font-weight: 600;
     transition: color 0.3s ease;
+}
+
+.logo a span {
+    color: var(--turquoise);
 }
 
 .logo a:hover {
@@ -234,6 +263,10 @@ div.list-box ul li a:hover {
 
     .logo a{
         color: var(--turquoise);
+    }
+
+    .logo a span {
+        color: var(--off-white);
     }
 
     .navbar-links {
